--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.22",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "typescript": "^3.9.6"
   },
   "homepage": "https://github.com/bouzuya/node-tsv#readme",
@@ -21,7 +23,10 @@
     "url": "git+https://github.com/bouzuya/node-tsv.git"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "run-s build:ts",
+    "build:ts": "tsc",
+    "clean": "rimraf lib",
+    "prepare": "run-s clean build",
     "test": "node lib/index.test.js"
   }
 }
