--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.22",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
+    "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "typescript": "^3.9.6"
   },
@@ -23,9 +28,12 @@
     "url": "git+https://github.com/bouzuya/node-tsv.git"
   },
   "scripts": {
-    "build": "run-s build:ts",
+    "build": "run-s build:format build:lint build:ts",
+    "build:format": "prettier --check 'src/**/*.ts'",
+    "build:lint": "eslint 'src/**/*.ts'",
     "build:ts": "tsc",
     "clean": "rimraf lib",
+    "format": "prettier --write 'src/**/*.ts'",
     "prepare": "run-s clean build",
     "test": "node lib/index.test.js"
   }
