fix eslint config

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "extends": [
       "eslint:recommended",
       "plugin:@typescript-eslint/recommended",
+      "prettier",
       "prettier/@typescript-eslint"
     ],
     "parser": "@typescript-eslint/parser",
